@@ -1,0 +1,18 @@
+<h1>K-pop女王再創高峰！Blackpink成員Rose加盟大西洋唱片，個人音樂事業再攀新高</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1AtxuWzdwEk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>Blackpink成員Rose與大西洋唱片簽約，展開個人音樂事業的新篇章。她的經紀公司黑标於上周五宣布了這一消息。大西洋唱片是華納音樂的子公司，旗下藝人包括火星人布魯諾、酷玩樂團和紅髮艾德等。</p>
+<p>為了慶祝Rose的加盟，大西洋唱片送給她一束巨大的紅玫瑰，附上一張卡片，上面寫著：“歡迎加入我們的大家庭！”</p>
+<p>Rose於2021年3月推出個人單曲“R”，成為Blackpink第二位推出個人專輯的成員。該專輯在發行當天就賣出了超過28萬張，打破了K-pop女歌手首周銷量的紀錄。</p>
+<p>主打歌曲“On The Ground”登上了告示牌熱門100榜單的第70位，成為當時K-pop女歌手在該榜單上的最高排名。該歌曲的音樂視頻在YouTube上單日播放量達4160萬次，獲得了吉尼斯世界紀錄的“24小時內最多播放量的K-pop個人音樂視頻”。</p>
+<h2>BTS田柾國在日本獲得白金認證</h2><p>BTS成員田柾國的個人單曲“Seven (feat. 拉托) - Explicit Ver.”獲得了日本唱片協會的白金認證。這是田柾國第三次獲得個人白金認證，之前的兩次是“Clean”版本的“Seven”和2018年的合輯專輯“Love Yourself: Answer”中的“Euphoria”。</p>
+<p>同時，“Seven”和“Standing Next To You”在Spotify上的播放量均超過9億次，使得田柾國的首張個人專輯“Golden”成為亞洲歌手首張擁有多首歌曲播放量超過9億次的專輯。<h2>Seventeen的音樂成就</h2></p>
+<p>Seventeen的歌曲「Golden」在告示牌200榜單上排名第二，連續24周位居榜單前列，打破了亞洲歌手的紀錄。另一首歌曲「Seven」登上了告示牌熱門100榜單的榜首，並連續15周位居榜單前列。在Spotify上，「Seven」的播放量超過11億次。</p>
+<h2>Seventeen在首爾開設快閃店</h2><p>Seventeen的快閃店將於10月5日至11日在首爾開幕，為該組合的第12張迷你專輯和世界巡演揭開序幕。該快閃店名為「Carat Station Seoul」，是與Spotify合作的項目。Spotify之前推出了該組合即將舉行的「17就在這裡」巡演的播放列表，該播放列表的播放量已超過50億次。</p>
+<p>快閃店的主題是地鐵站，並使用了該組合的標誌性顏色玫瑰石英和靜謐藍。遊客可以體驗互動內容和拍照區，該拍照區將預告該組合的巡演。</p>
+<h2>即將發行的迷你專輯和巡演</h2><p>Seventeen的迷你專輯「Spill The Feels」將於10月14日發行。10月12日至13日，該組合將在京畿道高陽市舉行巡演首場演唱會。</p>
+<h2>WINNER成員李昇勋舉辦個人粉絲演唱會</h2><h2>WINNER李昇勋將於11月2日在首爾舉行首場個人粉絲見面會</h2><p>YG娛樂宣布，WINNER成員李昇勋將於11月2日在首爾舉行他的首場個人粉絲見面會，名為「Offline Live」。這次見面會將充滿活力和樂趣。</p>
+<p>李昇勋最近發行了他的首張個人迷你專輯「My Type」，該專輯在八個地區的iTunes熱門專輯榜中登上了榜首。另外，他還參加了與其他節儉明星共同出演的綜藝節目「Stingy」，該節目於周三開始播出。</p>
+
+<p>資料來源： Korea Herald</p>
