@@ -18,3 +18,4 @@ https://www.koreaherald.com/view.php?ud=20241001050062
 https://www.koreaherald.com/view.php?ud=20240929050186
 https://www.koreaherald.com/view.php?ud=20240929050078
 https://www.koreaherald.com/view.php?ud=20240927050553
+https://www.koreaherald.com/view.php?ud=20240927050529
